# Galutinis_Projektas

./: CMakeLists.txt  README.md
my_webots_env/: pyvenv.cfg
simulator/: CMakeLists.txt  cbgraph.cpp  cbgraph.h  cblab.cpp  cblabhandler.cpp  cblabhandler.h  cbpoint.cpp  cbpoint.h  cbwall.cpp
webots/controllers/C1_cClient/: C1_cClient  C1_cClient.c
webots/controllers/C1_controller/: Makefile
webots/controllers/C1_pClient/: C1_pClient.py  commands.txt
webots/controllers/C1_supervisor/: C1-lab.xml  C1_supervisor.cpp  Makefile
webots/controllers/C2_controller/: C2_controller.cpp  Makefile
webots/controllers/C2_pClient/: C2_classic_pClient.py  C2_fuzzy_pClient.py  C2_pClient.py
webots/controllers/C2_supervisor/: C2-lab.xml  C2-lab2.xml  C2-lab3.xml  C2_supervisor  C2_supervisor.cpp  C2a-lab.xml  C2b-lab.xml  Makefile  mapping_score.awk
webots/controllers/C3_controller/: C3_controller.cpp  Makefile
webots/controllers/C3_pClient/: C3_pClient.py
webots/controllers/C3_supervisor/: C3_supervisor.cpp  C3a-lab.xml  C3b-lab.xml  Makefile  planning_score.awk
webots/worlds/: .pc_challenge_2.wbproj  .rmi_challenge_2.wbproj  .rmi_challenge_3.wbproj  pc_challenge_1.wbt  pc_challenge_2.wbt  rmi_challenge_1.wbt  rmi_challenge_2.wbt  rmi_challenge_3.wbt
